GNOME Bugzilla – Bug 728060
rtsp-session-pool: Incorrect annotation and leak in unit test
Last modified: 2014-04-12 04:15:37 UTC
When a session is created from the pool, the caller gets a reference to the session object. I will attach a patch that corrects the annotation and also fixes some memory leaks in the unit test.
Created attachment 274137 [details] [review] Proposed patch
commit 9219509bcfbc84b6c9d826b60b1d88f1619f016e Author: Linus Svensson <linusp.svensson@gmail.com> Date: Fri Apr 11 23:52:49 2014 +0200 rtsp-session-pool: Fixes annotation Fixes annotation for gst_rtsp_session_pool_create() and memory leaks in the sessionpool test. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=728060